--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container mx-auto px-4 flex items-center justify-between">
       <div class="flex items-center gap-4">
         <img src="https://example.com/asphalt10-logo.png" alt="Logo Asphalt 10" class="w-12 h-12" />
-        <h1 class="text-3xl font-bold">Asphalt 10</h1>
+        <h1 class="text-3xl font-bold">Riders</h1>
       </div>
       <a
         href="https://asphalt10-devloppement-studio.github.io/download/"
