--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="bg-black py-6 shadow-md">
     <div class="container mx-auto px-4 flex items-center justify-between">
       <div class="flex items-center gap-4">
-        <img src="https://example.com/asphalt10-logo.png" alt="Logo Asphalt 10" class="w-12 h-12" />
+        <img src="/logo.jpeg" alt="logo" class="w-12 h-12" />
         <h1 class="text-3xl font-bold">Riders</h1>
       </div>
       <a
