--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@
         📥 Télécharger Riders
       </a>
     </div>
-    }
-      iframe {
-        width: 100%;
-        height: 100%;
-        border: none;
-      }
+    
     </style>
   </head>
   <body>
@@ -40,7 +35,7 @@
   <section class="container mx-auto px-4 py-10">
     <h2 class="text-2xl font-bold mb-4">À propos du jeu</h2>
     <p class="text-gray-300 leading-relaxed">
-      Riders est le dernier opus de la célèbre série de jeu Riders.
+      Riders est le premier opus de la série de jeu Riders par Alture.
     </p>
   </section>
 
