--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1 class="text-3xl font-bold">Riders</h1>
       </div>
       <a
-        href="https://alture-officiel.github.io/Riders/download.html/"
+        href="https://alture-officiel.github.io/Riders/download.html"
         class="bg-red-600 hover:bg-red-700 text-white px-5 py-2 rounded-lg font-semibold transition"
       >
         📥 Télécharger Riders
