--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Riders</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <link rel="icon" type="image/png" href="https://example.com/asphalt10-logo.png" />
+  <link rel="icon" type="image/png" href="/img.jpeg" />
 </head>
 <body class="bg-gray-900 text-white font-sans">
 
