--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Riders</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <link rel="icon" type="image/png" href="/img.jpeg" />
+  <link rel="icon" type="image/png" href="logo.jpeg" />
 </head>
 <body class="bg-gray-900 text-white font-sans">
 
@@ -14,7 +14,7 @@
   <header class="bg-black py-6 shadow-md">
     <div class="container mx-auto px-4 flex items-center justify-between">
       <div class="flex items-center gap-4">
-        <img src="/logo.jpeg" alt="logo" class="w-12 h-12" />
+        <img src="logo.jpeg" alt="logo" class="w-12 h-12" />
         <h1 class="text-3xl font-bold">Riders</h1>
       </div>
       <a
