--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <script>
     const news = [
       {
-        title: "Aucune nouvelle disponible.",
+        title: "Aucue nouvelle disponible.",
         content: "Oups, il n'y a pas de nouvelles pour l'instant ! Reviens plus tard."
       },
       {
