--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
         href="https://alture-officiel.github.io/Riders/download.html"
         class="bg-red-600 hover:bg-red-700 text-white px-5 py-2 rounded-lg font-semibold transition"
       >
-        📥 Télécharger Riders
+        Télécharger Riders (Alpha 1.0.0)
       </a>
     </div>
     
     </style>
   </head>
   <body>
-    <span>        Trailer  (pour l'instant c'est un test)     </span>
-    <iframe src="https://www.dropbox.com/scl/fi/43vvfmu2l0tq80rm8rf1v/VID_20250813_144101.mp4?rlkey=kpdl18f08tlz8gqj61hgau734&st=b1zkcgxy&dl=0"></iframe>
-  </header>
+    <a
+        href="https://www.dropbox.com/scl/fi/43vvfmu2l0tq80rm8rf1v/VID_20250813_144101.mp4?rlkey=kpdl18f08tlz8gqj61hgau734&st=b1zkcgxy&dl=0"
+        class="bg-red-600 hover:bg-red-700 text-white px-5 py-2 rounded-lg font-semibold transition"
+      >
+        Regarder le trailer de Riders
+    </a>
 
   <!-- À propos -->
   <section class="container mx-auto px-4 py-10">
